app/assets/stylesheets/layout.scss
/* ... */
.assignment-option-name {
  margin-bottom: 0;
  font-size: 20px;
  font-weight: normal;
}

.assignment-option-description {
  margin-top: 0.5rem;
  margin-bottom: 1rem;
  color: #777;
}

.assignment-icon,
.group-assignment-icon {
  display: inline-block;
  width: 45px;
  height: 45px;
  margin-right: 0.7rem;
  text-align: center;
  border-radius: 50%;

  .octicon {
    height: 45px;
    font-size: 22px;
    line-height: 45px;
  }
}

.assignment-icon-individual {
  color: #555;
  background-color: rgba(216, 216, 216, 0.3);
}

.assignment-icon-group {
  color: #f3f3f3;
  background-color: #555;
}

.assignment-list-items {
  .assignment-list-item:not(:first-child) {
    padding-top: 1rem;
    margin-top: 1rem;
    border-top: 1px solid #e3e3e3;

    @media screen and (max-width: 40em) {
      padding-top: 1rem;
      margin-top: 0.5rem;
    }
  }

  .assignment-list-item:not(:last-child) {
    margin-bottom: 1rem;
  }
}

.assignment-name-link {
  padding-top: 0.4rem;
  margin-top: 0;
  margin-bottom: 0;
}

.assignment-type {
  margin-top: 0;
  margin-bottom: 0;

  @media screen and (max-width: 40em) {
    display: inline-block;
    max-width: 125px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    vertical-align: top;
  }
}

.assignment-invite-link {
  float: right;
}

.table-minimal {
  td {
    padding-right: 1rem;
    padding-left: 1rem;
  }

  td:first-child {
    padding-left: 0;
  }
}

hr {
  border-bottom: 1px solid #e3e3e3;
}

.dangerzone-container {
  padding-bottom: 13px;
  border: 1px solid #e3e3e3;
  border-radius: 3px;
}

.invitation-content {
  padding-bottom: 2rem;
  border-bottom: 1px solid #e3e3e3;

  @media screen and (max-width: 40em) {
    padding-bottom: 1rem;
    margin-bottom: 1rem;
  }
}

.group-assignment-repo-list {
  .group-assignment-repo-list-item:not(:first-child) {
    border-top: 1px solid #e3e3e3;
  }
}

.group-assignment-repo-list-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  font-size: 14px;

  &:last-child {
    padding-bottom: 0;
  }

  .octicon-alert {
    display: none;
  }

  &.disabled {
    a {
      color: $brand-gray;
    }

    .avatar {
      filter: grayscale(1);
    }
  }

  &.is-error {
    height: 48px;
    background-color: rgba($brand-red, 0.9);
    border-radius: 3px;

    &.assignment-repo-list-item {
      .octicon-alert {
        display: unset;
        fill: #fff;
      }

      .spinner {
        display: none;
      }
    }
  }

  .css-truncate-target {
    max-width: 20rem;

    @media screen and (max-width: 40em) {
      max-width: 10rem;
    }
  }

  .team-name {
    display: block;
    color: $brand-gray-dark;

    &:hover {
      color: $brand-blue;
    }
  }

  ul {
    list-style-type: none;

    li {
      display: inline-block;

      @media screen and (max-width: 40em) {
        margin-left: 0;
      }
    }
  }
}

.organization-list-items {
  .organization-list-item:not(:first-child) {
    padding-top: 2rem;
    margin-top: 2rem;
    border-top: 1px solid #e3e3e3;

    @media screen and (max-width: 40em) {
      padding-top: 1rem;
      margin-top: 1rem;
    }
  }
}

.organization-list-item {
  font-size: 16px;

  .avatar {
    margin-right: 10px;
  }

  .organization-title {
    display: block;
    padding-top: 0.4em;

    &:hover {
      color: $brand-blue;
    }
  }

  .organization-stats {
    padding-top: 0.5em;
    font-size: 14px;
    font-weight: bold;
    vertical-align: inherit;

    .organization-stat-item {
      margin-right: 0.6em;

      .octicon {
        margin-right: 4px;
        font-size: 16px;
      }
    }

    @media screen and (max-width: 40em) {
      display: none;
    }
  }
}

.site-footer {
  margin-top: 2em;
  margin-bottom: 2em;
  color: #777;
}

.made-with-heart {
  margin-bottom: 0.3em;
  font-size: 15px;

  a {
    position: relative;
    color: #777;
    text-decoration: none;
    transition: 0.2s color ease-in 0;

    &:hover { color: #333; }
  }
}

.desktop-invitation-content,
.settings,
.student-information,
.clipboard-form,
.classroom-user-name {
  @media screen and (max-width: 40em) {
    display: none;
  }
}

.mobile-invitation-content {
  display: none;

  @media screen and (max-width: 40em) {
    display: block;
  }
}

.blankslate.spacious {
  @media screen and (max-width: 40em) {
    padding: 1rem 0;
  }
}
/* ... */

